<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textColor="@android:color/tab_indicator_text"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_subtitle"
        app:layout_constraintEnd_toEndOf="@+id/editText11"
        app:layout_constraintStart_toStartOf="@+id/editText11" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="297dp"
        android:layout_height="47dp"

        android:layout_marginBottom="32dp"
        android:fontFamily="casual"
        android:text="@string/descript"
        android:textAlignment="center"
        android:textColor="#FFAB91"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText11"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="@+id/tv_title" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editText12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editText11" />

    <Button
        android:id="@+id/log_in"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="16dp"
        android:background="#5C6BC0"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editText12" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="130dp"
        android:layout_height="27dp"
        android:layout_marginStart="10dp"
        android:text="@string/hyphen"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/log_in" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="130dp"
        android:layout_height="27dp"
        android:layout_marginEnd="55dp"
        android:text="@string/hyphen"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="24dp"
        android:text="@string/or"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="172dp"
        android:layout_height="25dp"
        android:layout_marginBottom="16dp"
        android:text="@string/lang"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/google_login_btn"
        app:layout_constraintStart_toStartOf="@+id/google_login_btn" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/acc"
        app:layout_constraintBottom_toTopOf="@+id/google_login_btn"
        app:layout_constraintEnd_toStartOf="@+id/sign_inpg"
        app:layout_constraintStart_toStartOf="@+id/google_login_btn" />

    <TextView
        android:id="@+id/sign_inpg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/signup"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/google_login_btn"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/line"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/google_login_btn"
        android:layout_width="171dp"
        android:layout_height="36dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/googleg_standard_color_18"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:text="Sign in with Google"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/log_in"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="@+id/log_in" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="223dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/paperplane" />


</androidx.constraintlayout.widget.ConstraintLayout>