<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificationActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textColor="@android:color/tab_indicator_text"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="351dp"
        android:layout_height="432dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintBottom_toTopOf="@+id/done"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="@+id/tv_title" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="274dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="serif"
        android:text="@string/ver_01"
        android:textAlignment="center"
        android:textColor="#004D40"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_02"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="your address"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/ver_03"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/ver_05"
        app:layout_constraintBottom_toTopOf="@+id/res_email"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="@+id/textView15" />

    <Button
        android:id="@+id/res_email"
        android:layout_width="106dp"
        android:layout_height="35dp"
        android:layout_marginBottom="42dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="sans-serif-medium"
        android:text="@string/ver_06"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/ver_07"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="@+id/res_email"
        app:layout_constraintStart_toStartOf="@+id/res_email" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="172dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/lang"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/done"
        app:layout_constraintStart_toStartOf="@+id/done" />

    <Button
        android:id="@+id/done"
        android:layout_width="88dp"
        android:layout_height="35dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="sans-serif-medium"
        android:text="Sign In"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/res_email"
        app:layout_constraintStart_toStartOf="@+id/res_email" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="392dp"
        android:layout_height="29dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/line"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="223dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/paperplane" />


</androidx.constraintlayout.widget.ConstraintLayout>